--- a/index.html
+++ b/index.html
@@ -32,12 +32,63 @@
 	/>
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="favicon-32x32.png">
+	<link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png" media="none">
+	<link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png" media="none">
+	<link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png" media="none">
+	<link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png" media="none">
+	<link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png" media="none">
+	<link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png" media="none">
+	<link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png" media="none">
+	<link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png" media="none">
+	<link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png" media="none">
+	<link rel="icon" type="image/png" sizes="192x192" href="android-icon-192x192.png" media="none">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" media="none">
+	<link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png" media="none">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" media="none">
+	<link rel="manifest" href="manifest.json" media="none">
+	<meta name="msapplication-TileColor" content="#ffffff" media="none">
+	<meta name="msapplication-TileImage" content="ms-icon-144x144.png" media="none">
+	<meta name="theme-color" content="#364F6B" media="none">
 
 	<!--<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,300' rel='stylesheet' type='text/css'>-->
-	<link href="https://fonts.googleapis.com/css?family=Quicksand|Muli" rel="stylesheet">
-
+	<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet" media="none">
+	<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" media="none">
 	<link rel="stylesheet" href="css/style.min.css">
+
+	<!-- Hotjar Tracking Code for http://ensinaae.com.br -->
+	<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:255012,hjsv:5};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+	</script>
+
+	<!--Analytics-->
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-81251134-1', 'auto');
+		ga('send', 'pageview');
+	</script>
+
+	<!-- Google Tag Manager -->
+	<noscript>
+		<iframe src="//www.googletagmanager.com/ns.html?id=GTM-NXCMBP" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+	</noscript>
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NXCMBP');</script>
+	<!-- End Google Tag Manager -->
 
 </head>
 
@@ -49,15 +100,15 @@
 				<div class="fh5co-overlay"></div>
 				<div class="fh5co-cover text-center" style="background-image: url(imgs/learn_final.png);">
 					<div class="desc animate-box">
-						<h1 class="logo"></h1>
-						<h2>Encontre um professor particular pertinho de você</h2>
+						<div class="logo"></div>
+						<h1>Encontre um professor particular pertinho de você</h1>
 						<div class="row">
 							<div class="col-lg-12">
 								<input type="text" placeholder="Digite seu email" class="hero-input" id="email">
 								<span id="email-error">
-									E-mail inválido!
+									E-MAIL INVÁLIDO! <i class="icon-error"></i>
 								</span>
-								<button class="btn btn-secondary">Eu quero!</button>
+								<button class="btn btn-secondary" id="btnLead">Eu quero!</button>
 							</div>
 						</div>
 					</div>
@@ -75,7 +126,7 @@
 						<div class="nav-header">
 							<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
 							<h1 id="fh5co-logo">
-								<a href="index.html"><img src="imgs/logo_ensinaae_min.png" alt="Logo da ensinaaê" class="logo-header"></a>
+								<a href="#inicio"><img src="imgs/logo_ensinaae_min.png" alt="Logo da ensinaaê" class="logo-header"></a>
 							</h1>
 							<nav id="fh5co-menu-wrap" role="navigation">
 								<ul class="sf-menu" id="fh5co-primary-menu">
@@ -92,7 +143,7 @@
 										<a href="#sobre" class="fh5co-sub-ddown">SOBRE</a>
 									</li>
 									<li>
-										<a href="#contato" class="fh5co-sub-ddown">CONTATO</a>
+										<a href="#equipe" class="fh5co-sub-ddown">EQUIPE</a>
 									</li>
 									<!--<li><a href="#" class="fh5co-sub-ddown btn btn-secondary">COMEÇAR AGORA</a></li>-->
 								</ul>
@@ -115,27 +166,27 @@
 				</div>
 				<div class="container">
 					<div class="row text-center">
-						<div class="col-lg-3 col-md-12 col-sm-12 hvr-grow">
+						<div class="col-lg-3 col-md-12 col-sm-12">
 							<div class="services animate-box">
-								<img src="imgs/mortarboard.svg" alt="Reforço escolar'" class="benefits-icons">
+								<img src="imgs/mortarboard.svg" alt="Reforço escolar'" class="benefits-icons hvr-grow">
 								<h3>REFORÇO ESCOLAR</h3>
 							</div>
 						</div>
-						<div class="col-lg-3 col-md-12 col-sm-12 hvr-grow">
+						<div class="col-lg-3 col-md-12 col-sm-12">
 							<div class="services animate-box">
-								<img src="imgs/megaphone.svg" alt="Idiomas" class="benefits-icons">
+								<img src="imgs/megaphone.svg" alt="Idiomas" class="benefits-icons hvr-grow">
 								<h3>IDIOMAS</h3>
 							</div>
 						</div>
-						<div class="col-lg-3 col-md-12 col-sm-12 hvr-grow">
+						<div class="col-lg-3 col-md-12 col-sm-12">
 							<div class="services animate-box">
-								<img src="imgs/suitcase.svg" alt="Concursos" class="benefits-icons">
+								<img src="imgs/suitcase.svg" alt="Concursos" class="benefits-icons hvr-grow">
 								<h3>CONCURSOS</h3>
 							</div>
 						</div>
-						<div class="col-lg-3 col-md-12 col-sm-12 hvr-grow">
+						<div class="col-lg-3 col-md-12 col-sm-12">
 							<div class="services animate-box">
-								<img src="imgs/laptop.svg" alt="Programação'" class="benefits-icons">
+								<img src="imgs/laptop.svg" alt="Programação'" class="benefits-icons hvr-grow">
 								<h3>PROGRAMAÇÃO</h3>
 							</div>
 						</div>
@@ -195,8 +246,10 @@
 					<div class="row">
 						<div class="col-lg-8 animate-box">
 							<h3>A Ensinaaê te ajuda a realizar seus objetivos</h3>
-							<span>Se você é um dos muitos brasileiros que almeja atingir seus objetivos - concurso público, vestibulares, OAB, ou até uma ajudinha naquela prova difícil -, nós iremos te ajudar! Na ENSINAAÊ existem diversos professores espalhados por todo o Brasil e nas mais diversas especialidades, esperando por você. Eles irão dar todo apoio que falta para seu sucesso. Olha só como é simples: é só baixar o nosso aplicativo, falar sobre qual matéria quer aprender e pronto, você irá conhecer diversos professores bem pertinho de você! Aí é só combinar um local e realizar o investimento! Tudo de maneira simples, prática e segura! Tá esperando o quê? Cadastre-se agora e saia na frente em busca dos seus objetivos!
-							</span>
+							<span style="display: block;"> <b>O UBER + DUOLINGO da educação</b>, mais fácil que pedir um UBER e tão divertido quanto o aprender no DUOLINGO.</span>
+							<span style="display: block;">
+						 Se você é um dos muitos brasileiros que almeja atingir seus objetivos - <b>concurso público, vestibulares, OAB</b>, ou até uma ajudinha naquela prova difícil -, nós iremos te ajudar! Na ENSINAAÊ existem diversos professores particulares espalhados por todo o Brasil e nas mais diversas especialidades, esperando por você. Eles irão dar todo apoio que falta para seu sucesso. Olha só como é simples: é só baixar o nosso aplicativo, falar sobre qual matéria quer aprender e pronto, você irá conhecer diversos professores bem pertinho de você! Aí é só combinar um local e realizar o investimento! Tudo de maneira simples, prática e segura! Tá esperando o quê? Cadastre-se agora e saia na frente em busca dos seus objetivos!
+					</span>
 						</div>
 						<div class="col-lg-4 animate-box">
 							<img src="imgs/iphone.png" alt="Imagem do aplicativo da ensinaê em um celular" style="width: 350px;">
@@ -209,28 +262,46 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-							<h3>Torne-se um professor</h3>
+							<h3>Torne-se um professor particular</h3>
 							<p>Aumente sua renda mensal ajudando os outros a atingirem seus objetivos.</p>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-12 text-center">
-							<button class="btn btn-primary">QUERO SER PROFESSOR</button>
+							<a class="btn btn-primary" href="http://goo.gl/forms/2CCauzXwcaUnpxAy2" target="_blank">QUERO SER PROFESSOR</a>
 						</div>
 					</div>
 				</div>
 			</section>
 
 			<!-- fh5co-services-section -->
-			<section id="fh5co-contact-section" name="contato">
+			<section id="fh5co-contact-section" name="equipe">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-							<h3>Tem alguma dúvida? Fala com a gente!</h3>
+							<h3>Quem está por trás da ENSINAAÊ</h3>
+							<p>Atrás do nosso e do seu sonho. <i class="em em-heart" style="width: 1em;"></i></p>
 						</div>
 					</div>
 				</div>
 				<div class="container">
+					<div class="row profile">
+						<div class="col-md-4 text-center">
+							<img src="imgs/felipegimenes.jpg" alt="Felipe Gimenes" class="profile-img">
+							<p><a href="https://www.facebook.com/felipegimenes">Felipe Gimenes</a></p>
+						</div>
+						<div class="col-md-4 text-center">
+							<img src="imgs/gabrielmalinosqui.jpg" alt="Gabriel Malinosqui" class="profile-img">
+							<p><a href="https://facebook.com/gabrielmalinosqui">Gabriel Malinosqui</a></p>
+						</div>
+						<div class="col-md-4 text-center">
+							<img src="imgs/wellingtonsantana.jpg" alt="Wellington Santana" class="profile-img">
+							<p><a href="https://www.facebook.com/wellington.c.santana">Wellington Santana</a></p>
+						</div>
+						<div class="col-md-4"></div>
+					</div>
+				</div>
+				<!--<div class="container">
 					<div class="row">
 						<div class="col-md-10 col-md-offset-1">
 							<div class="row">
@@ -262,7 +333,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div>-->
 			</section>
 			<!-- fh5co-blog-section -->
 			<footer>
@@ -295,6 +366,9 @@
 
 	</div>
 	<!-- END fh5co-wrapper -->
+
+	<!--Firebase-->
+	<script src="https://www.gstatic.com/firebasejs/3.0.2/firebase.js"></script>
 
 	<!-- Main JS (Do not remove) -->
 	<script src="js/main.min.js"></script>
