--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 						<h1>Encontre um professor particular pertinho de você</h1>
 						<div class="row">
 							<div class="col-lg-12">
-								<input type="text" placeholder="Digite o que quer aprender" class="hero-input" id="_course">
-								<button class="btn btn-secondary" id="btnContinue" data-toggle="modal" data-target="#myModal">Continuar</button>
+								<input type="text" placeholder="O que quer aprender" class="hero-input" id="_course">
+								<button class="btn btn-secondary" type="button" id="btnContinue" data-toggle="modal" data-target="#myModal" disabled>Continuar</button>
 							</div>
 						</div>
 					</div>
@@ -343,117 +343,109 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 					<h4 class="modal-title" id="myModalLabel">Solicitar orçamento de aula</h4>
 				</div>
-				<div class="modal-body">
-					<div class="row">
-						<div class="col-lg-12">
-							<div class="row">
-								<div class="col-lg-12 col-sm-12">
-									<div class="form-group">
-										<label for="name">Nome completo*</label>
-										<input type="text" class="form-control" placeholder="Entre com o seu nome" id="name" name="name">
+				<div class="modal-body" id="modalForm">
+					<form action="#" id="formModal">
+						<div class="row">
+							<div class="col-lg-12">
+								<div class="row">
+									<div class="col-lg-12 col-sm-12">
+										<div class="form-group">
+											<label for="name">Nome completo*</label>
+											<input type="text" class="form-control" placeholder="Entre com o seu nome" id="name" name="name" required>
+										</div>
 									</div>
 								</div>
-							</div>
-							<div class="row">
-								<div class="col-lg-12 col-sm-12">
-									<div class="checkbox">
-										<label>
+								<div class="row">
+									<div class="col-lg-12 col-sm-12">
+										<div class="checkbox">
+											<label>
 										<input type="checkbox" class="checkbox" id="phone-check">
 									Quero ser contatado pelo meu celular
 									</label>
+										</div>
 									</div>
 								</div>
-							</div>
-							<div class="row" id="phone-div" style="display: none;">
-								<div class="col-lg-12 col-sm-12">
-									<div class="form-group">
-										<label for="name">Celular</label>
-										<input type="tel" class="form-control" placeholder="Entre com o seu celular" id="phone" name="phone">
+								<div class="row" id="phone-div" style="display: none;">
+									<div class="col-lg-12 col-sm-12">
+										<div class="form-group">
+											<label for="name">Celular</label>
+											<input type="tel" class="form-control" placeholder="Entre com o seu celular" id="phone" name="phone">
+										</div>
 									</div>
 								</div>
-							</div>
-							<div class="row">
-								<div class="col-lg-12 col-sm-12">
-									<div class="form-group">
-										<label for="name">E-mail</label>
-										<input type="email" class="form-control" placeholder="Entre com o seu e-mail" id="email" name="email">
+								<div class="row">
+									<div class="col-lg-12 col-sm-12">
+										<div class="form-group">
+											<label for="name">E-mail*</label>
+											<input type="email" class="form-control" placeholder="Entre com o seu e-mail" id="email" name="email" required>
+										</div>
 									</div>
 								</div>
-							</div>
-							<div class="row">
-								<div class="col-lg-6 col-sm-12">
-									<div class="form-group">
-										<label for="name">Matéria*</label>
-										<input type="email" class="form-control" id="email" name="email" value="Matemática" disabled>
+								<div class="row">
+									<div class="col-lg-6 col-sm-12">
+										<div class="form-group">
+											<label for="name">Matéria*</label>
+											<input type="text" class="form-control" name="course" id="course" disabled required>
+										</div>
 									</div>
-								</div>
-								<div class="col-lg-6 col-sm-12">
-									<div class="form-group">
-										<label for="name">Até quanto quer pagar</label>
-										<select class="form-control" id="price" name="price">
+									<div class="col-lg-6 col-sm-12">
+										<div class="form-group">
+											<label for="name">Até quanto quer pagar</label>
+											<select class="form-control" id="price" name="price">
 											<option value="-1">Selecione uma opção</option>
 											<option value="1">Até R$ 60,00</option>
 											<option value="2">De R$ 61,00 até R$ 80,00</option>
 											<option value="3">De R$ 81,00 até R$ 100,00</option>
 											<option value="3">De R$ 101,00 até R$ 120,00</option>											
 										</select>
+										</div>
 									</div>
 								</div>
-							</div>
-							<div class="row">
-								<div class="col-lg-6 col-sm-12">
-									<div class="form-group">
-										<label for="name">Data da aula*</label>
-										<input type="text" class="form-control" placeholder="Entre com apenas números" id="date" name="date">
+								<div class="row">
+									<div class="col-lg-6 col-sm-12">
+										<div class="form-group">
+											<label for="name">Data da aula*</label>
+											<input type="text" class="form-control" placeholder="Entre com apenas números" id="date" name="date" required>
+										</div>
+									</div>
+									<div class="col-lg-6 col-sm-12">
+										<div class="form-group">
+											<label for="name">Horário da aula</label>
+											<input type="text" class="form-control" placeholder="Entre com apenas números" id="hour" name="hour">
+										</div>
 									</div>
 								</div>
-								<div class="col-lg-6 col-sm-12">
-									<div class="form-group">
-										<label for="name">Horário da aula</label>
-										<input type="text" class="form-control" placeholder="Entre com apenas números" id="hour" name="hour">
+								<div class="row">
+									<div class="col-lg-6">
+										<div class="form-group">
+											<label for="location">Local da aula</label>
+											<input type="text" class="form-control" placeholder="Entre com o CEP ou nome da rua" id="location" name="location">
+										</div>
 									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-lg-6">
-									<div class="form-group">
-										<label for="location">Local da aula</label>
-										<input type="text" class="form-control" placeholder="Entre com o seu CEP" id="location" name="location">
-										<!--<label for="name">O que quer aprender</label>
-										<select class="form-control" id="course" name="course">
-											<option value="-1">Selecione uma opção</option>
-											<option value="1">Atualidades</option>
-											<option value="2">Biologia</option>
-											<option value="3">Espanhol</option>
-											<option value="4">Física</option>
-											<option value="5">Geografia</option>
-											<option value="6">Gramática</option>
-											<option value="7">História</option>
-											<option value="8">Inglês</option>
-											<option value="9">Matemática</option>
-											<option value="10">Redação</option>
-										</select>-->
-									</div>
-								</div>
-								<div class="col-lg-6">
-									<div class="form-group">
-										<label for="name">Nível da matéria</label>
-										<i style="margin-left: 5px;" class="mdi mdi-help-circle" rel="tooltip" data-toggle="tooltip" title="Selecione de acordo com a sua dificuldade, por exemplo, se sua dificuldade é com cálculo, selecione o nível superior."></i>
-										<select class="form-control" id="nivel" name="nivel">
+									<div class="col-lg-6">
+										<div class="form-group">
+											<label for="name">Nível da matéria</label>
+											<i style="margin-left: 5px;" class="mdi mdi-help-circle" rel="tooltip" data-toggle="tooltip" title="Selecione de acordo com a sua dificuldade, por exemplo, se sua dificuldade é com cálculo, selecione o nível superior."></i>
+											<select class="form-control" id="nivel" name="nivel">
 											<option value="-1">Selecione uma opção</option>
 											<option value="1">Fundamental</option>
 											<option value="2">Médio</option>
 											<option value="3">Superior</option>
 										</select>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-					</div>
+					</form>
+				</div>
+				<div class="modal-body text-center" id="modalSuccess" style="display: none;">
+					<p>Pedido realizado com sucesso, em até <b>48</b> horas retornaremos com os melhores professores particulares para você!</p>
+					<img src="imgs/success.svg" style="width: 110px" alt="">
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">cancelar</button>
-					<button type="button" class="btn btn-secondary">Solicitar</button>
+					<button type="button" class="btn btn-default" id="btnDismiss" data-dismiss="modal">cancelar</button>
+					<button type="button" class="btn btn-secondary" id="btnBuy">solicitar</button>
 				</div>
 			</div>
 		</div>
