Adicionando método para enviar e-mail

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 										<div class="form-group">
 											<label for="name">Nível da matéria</label>
 											<i style="margin-left: 5px;" class="mdi mdi-help-circle" rel="tooltip" data-toggle="tooltip" title="Selecione de acordo com a sua dificuldade, por exemplo, se sua dificuldade é com cálculo, selecione o nível superior."></i>
-											<select class="form-control" id="nivel" name="nivel">
+											<select class="form-control" id="level" name="level">
 											<option value="-1">Selecione uma opção</option>
 											<option value="1">Fundamental</option>
 											<option value="2">Médio</option>
