--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-							<h3>O que posso aprender</h3>
+							<h3>O que posso aprender?</h3>
 							<p>Encontre aulas particulares para qual for seu objetivo.</p>
 						</div>
 					</div>
@@ -219,7 +219,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 								<img src="imgs/target.svg" alt="óculos" class="howto-icons">
 								<!--<span><i class="icon-map"></i></span>-->
 								<h3>Receba os melhores</h3>
-								<p>Voccê receba em seu e-mail os melhores professores particulares prontos para fazer você atingir todos os seus objetivos
+								<p>Você recebe em seu e-mail os melhores professores particulares prontos para fazer você atingir todos as suas metas
 									com tranquilidade.
 								</p>
 							</div>
@@ -229,8 +229,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 								<img src="imgs/trophy.svg" alt="troféu'" class="howto-icons">
 								<!--<span><i class="icon-trophy"></i></span>-->
 								<h3>Atinja seus objetivos</h3>
-								<p>Passar no ENEM, no vestibular, no concurso público ou tocar um instrumento, nunca foi tão fácil, nós temos certeza
-									que atingirá seus objetivos.</p>
+								<p>Passar no ENEM, no vestibular, no concurso público ou tocar um instrumento, nunca foi tão fácil. Nós temos certeza
+									que atingirá suas metas.</p>
 							</div>
 						</div>
 					</div>
@@ -242,21 +242,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
 							<h3>Quem somos</h3>
-							<p>A ENSINAAÊ te ajuda a realizar seus objetivos.</p>
+							<p>A ENSINAAÊ te ajuda a realizar seus sonhos.</p>
 						</div>
 					</div>
 				</div>
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-8 animate-box">
-							Se você é um dos muitos brasileiros que almeja atingir seus objetivos - <b>concurso público, vestibulares, OAB</b>,
-							ou até uma ajudinha naquela prova difícil -, nós iremos te ajudar! Na ENSINAAÊ existem diversos professores particulares
-							espalhados por todo o Brasil e nas mais diversas especialidades, esperando para dar a melhor aula particular para
-							você. Eles irão dar todo apoio que falta para seu sucesso. Tudo isso de maneira muito simples: é só preencher o nosso
-							<a href="#inicio">formulário</a>, falar sobre suas necessidades como o que deseja aprender, qual horário e data prefere
-							a aula, qual o nível do profissional e o quanto quer pagar. Pronto você irá conhecer diversos professores bem pertinho
-							de você! Tudo de maneira simples, prática e segura! Tá esperando o quê? Cadastre-se agora e saia na frente em busca
-							dos seus objetivos! Passar no ENEM ou em concursos públicos nunca foi tão fácil!
+							Se você é um dos muitos brasileiros que almeja atingir suas metas como  <b>concurso público, vestibulares, ENEM, OAB, ou até uma ajudinha naquela prova difícil</b>, nós iremos te ajudar! Na ENSINAAÊ existem diversos professores particulares espalhados por todo o Brasil e nas mais diversas especialidades, esperando para dar a melhor aula particular para você. Eles irão dar todo apoio que falta para seu sucesso. Tudo isso de maneira muito simples: é só preencher o nosso <a href="#" data-toggle="modal" data-target="#myModal" >formulário</a>, falar sobre suas necessidades como o que deseja aprender, qual horário e em quais dias da semana prefere a aula, qual o nível do profissional e o quanto quer pagar. Pronto! Você irá conhecer diversos professores bem pertinho de você! Tudo de maneira simples, prática e segura! Tá esperando o quê? Cadastre-se agora e saia na frente em busca dos seus objetivos! Passar no ENEM ou em concursos públicos nunca foi tão fácil!
 						</div>
 						<div class="col-lg-4 animate-box">
 							<img src="imgs/iphone.png" alt="Imagem do aplicativo da ensinaê em um celular" style="width: 350px;">
