--- a/index.html
+++ b/index.html
@@ -279,8 +279,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 								<p>Passar no ENEM, no vestibular, no concurso público ou tocar um instrumento, nunca foi tão fácil. Nós temos certeza
 									que atingirá suas metas.</p>
-								<p>Passar no ENEM, no vestibular, no concurso público ou tocar um instrumento nunca foi tão fácil, nós temos certeza
-									que atingirá seus objetivos.</p>
 							</div>
 						</div>
 					</div>
@@ -299,7 +297,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-8 animate-box">
-							Se você é um dos muitos brasileiros que almeja atingir suas metas como  <b>concurso público, vestibulares, ENEM, OAB, ou até uma ajudinha naquela prova difícil</b>, nós iremos te ajudar! Na ENSINAAÊ existem diversos professores particulares espalhados por todo o Brasil e nas mais diversas especialidades, esperando para dar a melhor aula particular para você. Eles irão dar todo apoio que falta para seu sucesso. Tudo isso de maneira muito simples: é só preencher o nosso <a href="#" data-toggle="modal" data-target="#myModal" >formulário</a>, falar sobre suas necessidades como o que deseja aprender, qual horário e em quais dias da semana prefere a aula, qual o nível do profissional e o quanto quer pagar. Pronto! Você irá conhecer diversos professores bem pertinho de você! Tudo de maneira simples, prática e segura! Tá esperando o quê? Cadastre-se agora e saia na frente em busca dos seus objetivos! Passar no ENEM ou em concursos públicos nunca foi tão fácil!
+							Se você é um dos muitos brasileiros que almeja atingir suas metas como <b>concurso público, vestibulares, ENEM, OAB, ou até uma ajudinha naquela prova difícil</b>,
+							nós iremos te ajudar! Na ENSINAAÊ existem diversos professores particulares espalhados por todo o Brasil e nas mais
+							diversas especialidades, esperando para dar a melhor aula particular para você. Eles irão dar todo apoio que falta
+							para seu sucesso. Tudo isso de maneira muito simples: é só preencher o nosso <a href="#" data-toggle="modal" data-target="#myModal">formulário</a>,
+							falar sobre suas necessidades como o que deseja aprender, qual horário e em quais dias da semana prefere a aula, qual
+							o nível do profissional e o quanto quer pagar. Pronto! Você irá conhecer diversos professores bem pertinho de você!
+							Tudo de maneira simples, prática e segura! Tá esperando o quê? Cadastre-se agora e saia na frente em busca dos seus
+							objetivos! Passar no ENEM ou em concursos públicos nunca foi tão fácil!
 						</div>
 						<div class="col-lg-4 animate-box">
 							<img src="imgs/hero.png" alt="Imagem do aplicativo da ensinaê em um celular" style="width: 350px; margin-top: -130px;">
@@ -353,15 +358,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<div class="row profile">
 						<div class="col-md-4 text-center">
 							<img src="imgs/felipegimenes.jpg" alt="Felipe Gimenes" class="profile-img">
-							<p><a href="https://www.linkedin.com/in/felipe-almeida-gimenes-6462b36a">Felipe Gimenes</a></p>
+							<p><a href="https://www.linkedin.com/in/felipe-almeida-gimenes-6462b36a" target="_blank">Felipe Gimenes</a></p>
 						</div>
 						<div class="col-md-4 text-center">
 							<img src="imgs/gabrielmalinosqui.jpg" alt="Gabriel Malinosqui" class="profile-img">
-							<p><a href="https://br.linkedin.com/in/gabriel-malinosqui-011ab56b">Gabriel Malinosqui</a></p>
+							<p><a href="https://br.linkedin.com/in/gabriel-malinosqui-011ab56b" target="_blank">Gabriel Malinosqui</a></p>
 						</div>
 						<div class="col-md-4 text-center">
 							<img src="imgs/wellingtonsantana.jpg" alt="Wellington Santana" class="profile-img">
-							<p><a href="https://www.linkedin.com/in/wellington-cristi-vilela-santana-a48b1123">Wellington Santana</a></p>
+							<p><a href="https://www.linkedin.com/in/wellington-cristi-vilela-santana-a48b1123" target="_blank">Wellington Santana</a></p>
 						</div>
 						<div class="col-md-4"></div>
 					</div>
