Corrigindo bugs mobile

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <body>
 	<div id="fh5co-wrapper">
-		<div class="warning">
+		<div class="warning visible-lg">
 			<div class="row">
 				<div class="col-lg-9 warning-message">
 					<h2>Garanta-se no <b>ENEM 2016</b>, os melhores professores particulares estão aqui na ENSINAAÊ.</h2>
@@ -115,8 +115,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 						<h1>Encontre um professor particular pertinho de você</h1>
 						<div class="row visible-sm visible-xs visible-md">
 							<div class="col-lg-12">
-								<input type="text" placeholder="O que quer aprender" class="hero-input" id="_course">
-								<button class="btn btn-secondary" type="button" id="btnContinue" data-toggle="modal" data-target="#myModal" disabled>Continuar</button>
+								<div class="row" style="padding-left: 20px; padding-right: 20px">
+									<input type="text" placeholder="Matéria" class="hero-input" id="_course" style="width: 100%;">
+								</div>
+								<div class="row" style="padding: 20px;">
+									<button class="btn btn-secondary" type="button" id="btnContinue" data-toggle="modal" data-target="#myModal" disabled style="width: 100%;">Continuar</button>
+								</div>
 							</div>
 						</div>
 						<div class="row visible-lg">
