Adicionando menu mobile

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				</div>
 
 			</div>
-			<div id="fh5co-header">
+			<div id="fh5co-header" class="visible-lg">
 				<header id="fh5co-header-section">
 					<div class="container">
 						<div class="nav-header">
@@ -527,6 +527,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				</div>
 			</div>
 		</div>
+	</div>
+
+	<div id="cd-nav">
+		<a href="#0" class="cd-nav-trigger">Menu<span></span></a>
+
+		<nav id="cd-main-nav">
+			<ul>
+				<li><a href="#inicio">Início</a></li>
+				<li><a href="#comofunciona">Como funciona</a></li>
+				<li><a href="#sobre">Quem somos</a></li>
+				<li><a href="#equipe">Equipe</a></li>
+			</ul>
+		</nav>
 	</div>
 
 	<!--Firebase-->
