--- a/index.html
+++ b/index.html
@@ -64,11 +64,14 @@
 	<link rel="stylesheet" href="node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	<!-- /build -->
-	
+
+	<!-- changed to -->
+	<link rel="stylesheet" href="css/style.min.css">
+
 	<link rel="stylesheet" href="http://cdn.materialdesignicons.com/1.7.22/css/materialdesignicons.min.css">
 
 	<!-- Hotjar Tracking Code for http://ensinaae.com.br -->
-	<script>
+	<script async>
     (function(h,o,t,j,a,r){
         h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
         h._hjSettings={hjid:255012,hjsv:5};
@@ -80,7 +83,7 @@
 	</script>
 
 	<!--Analytics-->
-	<script>
+	<script async>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -94,7 +97,7 @@
 	<noscript>
 		<iframe src="//www.googletagmanager.com/ns.html?id=GTM-NXCMBP" height="0" width="0" style="display:none;visibility:hidden"></iframe>
 	</noscript>
-	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	<script async>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
