Arrumando bug no mobile

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				</div>
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-8 animate-box">
+						<div class="col-lg-8 col-md-12 col-sm-12 animate-box">
 							Se você é um dos muitos brasileiros que almeja atingir suas metas como <b>concurso público, vestibulares, ENEM, OAB, ou até uma ajudinha naquela prova difícil</b>,
 							nós iremos te ajudar! Na ENSINAAÊ existem diversos professores particulares espalhados por todo o Brasil e nas mais
 							diversas especialidades, esperando para dar a melhor aula particular para você. Eles irão dar todo apoio que falta
@@ -323,8 +323,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 							Tudo de maneira simples, prática e segura! Tá esperando o quê? Cadastre-se agora e saia na frente em busca dos seus
 							objetivos! Passar no ENEM ou em concursos públicos nunca foi tão fácil!
 						</div>
-						<div class="col-lg-4 animate-box">
-							<img src="imgs/hero.png" alt="Imagem do aplicativo da ensinaê em um celular" title="Professores particulares" style="width: 350px; margin-top: -130px;">
+						<div class="col-lg-4 animate-box visible-lg">
+							<img src="imgs/hero.png" alt="Imagem do aplicativo da ensinaê em um celular"  title="Professores particulares" style="width: 350px; margin-top: -130px;">
 						</div>
 					</div>
 				</div>
