--- a/index.html
+++ b/index.html
@@ -104,6 +104,20 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-NXCMBP');</script>
 	<!-- End Google Tag Manager -->
 
+	<!--critical css-->
+	<style>
+		critical: {
+			test: {
+				options: {
+					base: './', css: [ 'test/fixture/styles/main.css', 'test/fixture/styles/bootstrap.css'], width: 320, height: 70
+				}
+				,
+				src: 'test/fixture/index.html',
+				dest: 'test/generated/critical.css'
+			}
+		}
+	</style>
+
 </head>
 
 <body>
@@ -324,7 +338,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 							objetivos! Passar no ENEM ou em concursos públicos nunca foi tão fácil!
 						</div>
 						<div class="col-lg-4 animate-box visible-lg">
-							<img src="imgs/hero.png" alt="Imagem do aplicativo da ensinaê em um celular"  title="Professores particulares" style="width: 350px; margin-top: -130px;">
+							<img src="imgs/hero.png" alt="Imagem do aplicativo da ensinaê em um celular" title="Professores particulares" style="width: 350px; margin-top: -130px;">
 						</div>
 					</div>
 				</div>
@@ -401,8 +415,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									<a href="http://facebook.com/ensinaae" target="_blank"><i class="mdi mdi-facebook"></i></a>
 									<a href="http://instagram.com/ensinaaeoficial" target="_blank"><i class="mdi mdi-instagram"></i></a>
 									<!--<a href="#"><i class="icon-dribbble2"></i></a>-->
+									<a href="http://duvidas.ensinaae.com.br" target="_blank"><i class="mdi mdi-help-circle"></i></a>
 									<!--<a href="#"><i class="icon-youtube"></i></a>-->
-									<a href="http://medium.com/ensinaaê" target="_blank"><i class="mdi mdi-medium"></i></a>
+									<a href="http://ensinaae.com.br/blog" target="_blank"><i class="mdi mdi-rss"></i></a>
 								</p>
 								<p>Copyright 2016 <a href="#">ensinaaê</a>. Todos os direitos reservados. <br>Feito com <i class="mdi mdi-heart"></i>									em Bauru
 								</p>
