Arrumando processhtml plugin

--- a/index.html
+++ b/index.html
@@ -56,17 +56,12 @@
 	<!--<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" media="none">-->
 
 	<!-- build:css css/style.min.css -->
-	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/hover-min.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/superfish.css">
-	<link rel="stylesheet" href="node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	<!-- /build -->
-
-	<!-- changed to -->
-	<link rel="stylesheet" href="css/style.min.css">
 
 	<link rel="stylesheet" href="http://cdn.materialdesignicons.com/1.7.22/css/materialdesignicons.min.css">
 
@@ -511,7 +506,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									<div class="col-lg-6 col-sm-12">
 										<div class="form-group">
 											<label for="name">Data da aula*</label>
-											<input type="text" class="form-control" placeholder="Entre com apenas números" id="date" name="date" required>
+											<input type="date" class="form-control" placeholder="Entre com apenas números" id="date" name="date" required>
 										</div>
 									</div>
 									<div class="col-lg-6 col-sm-12">
