--- a/index.html
+++ b/index.html
@@ -65,6 +65,20 @@
 
 	<link rel="stylesheet" href="http://cdn.materialdesignicons.com/1.7.22/css/materialdesignicons.min.css">
 
+	<!--Start of Tawk.to Script-->
+	<script type="text/javascript" async>
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/57f54bf60251ff2807a2a5a5/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+	<!--End of Tawk.to Script-->
+
 	<!-- Hotjar Tracking Code for http://ensinaae.com.br -->
 	<script async>
     (function(h,o,t,j,a,r){
