Melhorando keywords e title da página para SEO.

--- a/index.html
+++ b/index.html
@@ -9,22 +9,24 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ENSINAAÊ - Encontre um professor particular pertinho de você</title>
+	<title>Encontre um professor particular pertinho de você | ENSINAAÊ </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="ENSINAAÊ, é uma plataforma que conecta pessoas a professores particulares. Você escolhe o quê, com quem e onde deseja aprender. Simples assim. Ensina aê, vai!"
+	<meta name="description" content="ENSINAAÊ, é uma plataforma que conecta pessoas a professores particulares. Você escolhe o quê, com quem e onde deseja aprender. Simples assim."
 	/>
-	<meta name="keywords" content="professor particular, aulas particulares, aula concurso público, professor particular matematica, professor particular português'"
+	<meta name="keywords" content="aula particular, professor particular, aula, professor, particular, aulas particulares, professores particulares, reforço escolar, apoio escolar, aulas para concursos, enem"
 	/>
 	<meta name="author" content="Ensinaaê" />
 
 
-	<!-- Facebook and Twitter integration -->
+	<!-- Facebook integration -->
 	<meta property="og:title" content="Ensinaaê - Aprenda o que quiser com alguém pertinho de você" />
 	<meta property="og:image" content="http://ensinaae.com.br/imgs/learn_final.png" />
 	<meta property="og:url" content="http://ensinaae.com.br" />
 	<meta property="og:site_name" content="ensinaaê" />
 	<meta property="og:description" content="ENSINAAÊ, é uma plataforma que conecta pessoas a professores particulares. Você escolhe o quê, com quem e onde deseja aprender. Simples assim. Ensina aê, vai!"
 	/>
+
+	<!--Twitter integration-->
 	<meta name="twitter:title" content="Ensinaaê - Aprenda o que quiser com alguém pertinho de você" />
 	<meta name="twitter:image" content="http://ensinaae.com.br/imgs/learn_final.png" />
 	<meta name="twitter:url" content="http://ensinaae.com.br" />
@@ -51,9 +53,7 @@
 	<meta name="msapplication-TileImage" content="ms-icon-144x144.png" media="none">
 	<meta name="theme-color" content="#364F6B" media="none">
 
-	<!--<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,300' rel='stylesheet' type='text/css'>-->
 	<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet" media="none">
-	<!--<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" media="none">-->
 
 	<!-- build:css css/style.min.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -112,20 +112,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-NXCMBP');</script>
 	<!-- End Google Tag Manager -->
-
-	<!--critical css-->
-	<style>
-		critical: {
-			test: {
-				options: {
-					base: './', css: [ 'test/fixture/styles/main.css', 'test/fixture/styles/bootstrap.css'], width: 320, height: 70
-				}
-				,
-				src: 'test/fixture/index.html',
-				dest: 'test/generated/critical.css'
-			}
-		}
-	</style>
 
 </head>
 
