--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
 	<!-- build:css css/style.min.css -->
 	<link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="stylesheet" href="css/hover-min.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/superfish.css">
@@ -402,6 +403,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			<footer>
 				<div id="footer">
 					<div class="container">
+						<div class="row">
+							<div class="col-lg-10">
+								<ul class="courses-footer">
+									<li>Atualidades</li>
+									<li>Biologia</li>
+									<li>Espanhol</li>
+									<li>Física</li>
+									<li>Geografia</li>
+									<li>Gramática</li>
+									<li>História</li>
+									<li>Inglês</li>
+									<li>Matemática</li>
+									<li>Redação</li>
+								</ul>
+							</div>
+						</div>
 						<div class="row">
 
 							<div class="col-md-6 col-md-offset-3 text-center">
