Adicionando links ao footer

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			<footer>
 				<div id="footer">
 					<div class="container">
-						<div class="row">
+						<div class="row visible-lg">
 							<div class="col-lg-10">
 								<ul class="courses-footer">
 									<li>Atualidades</li>
@@ -417,6 +417,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									<li>Matemática</li>
 									<li>Redação</li>
 								</ul>
+							</div>
+							<div class="col-lg-2">
+								<div class="row">
+									<a href="/blog" class="link-footer">BLOG</a>
+								</div>
+								<div class="row">
+									<a href="http://duvidas.ensinaae.com.br" class="link-footer">DÚVIDAS</a>
+								</div>
+								<div class="row">
+									<a href="http://goo.gl/forms/2CCauzXwcaUnpxAy2" class="link-footer">SOU PROFESSOR</a>
+								</div>
 							</div>
 						</div>
 						<div class="row">
