--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/superfish.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
 	<!-- /build -->
 
 	<link rel="stylesheet" href="http://cdn.materialdesignicons.com/1.7.22/css/materialdesignicons.min.css">
@@ -548,7 +549,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									<div class="col-lg-6">
 										<div class="form-group">
 											<label for="location">Local da aula</label>
-											<input type="text" class="form-control" placeholder="Entre com o CEP ou nome da rua" id="location" name="location">
+											<input type="text" class="form-control" placeholder="Entre com o CEP" id="location" name="location">
 										</div>
 									</div>
 									<div class="col-lg-6">
