--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 								</div>
 							</div>
 						</div>
+						<div class="row">
+							<h4 style="color: #fff;">SELECIONE UMA MATÉRIA</h4>
+						</div>
 						<div class="row visible-lg">
 							<div class="col-lg-6 col-lg-offset-3">
 								<div class="col-lg-2" rel="tooltip" data-toggle="tooltip" title="Atualidades">
@@ -175,11 +178,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 								</div>
 							</div>
 						</div>
-						<div class="row visible-lg" style="margin-top: 35px;">
-							<!--<h4 class="courses">mais matérias</h4>-->
+						<!--<div class="row visible-lg" style="margin-top: 35px;">
+							<h4 class="courses">mais matérias</h4>
 							<button class="btn btn-secondary" type="button" id="btnAllCourses" data-toggle="modal" data-target="#myModal">Mais matérias</button>
 
-						</div>
+						</div>-->
 					</div>
 				</div>
 
@@ -470,6 +473,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 							</div>
 						</div>
 						<div class="row">
+							<div class="col-lg-3 col-md-12">
+								<label>Matéria</label>
+								<span class="chip" id="course"></span>
+							</div>
+						</div>
+						<div class="row">
 							<div class="col-lg-12">
 								<div class="row">
 									<div class="col-lg-6 col-sm-12">
@@ -485,14 +494,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 										</div>
 									</div>
 								</div>
-								<div class="row">
+								<!--<div class="row">
 									<div class="col-lg-12 col-sm-12">
 										<div class="form-group">
 											<label for="name">Matéria*</label>
 											<input type="text" class="form-control" name="course" id="course" required>
 										</div>
 									</div>
-								</div>
+								</div>-->
 							</div>
 						</div>
 						<!--<div class="row">
