Corrigindo botão de "QUERO PASSAR"

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<h2>Garanta-se no <b>ENEM 2016</b>, os melhores professores particulares estão aqui na ENSINAAÊ.</h2>
 				</div>
 				<div class="col-lg-3 text-right">
-					<button class="warning-button" data-toggle="modal" data-target="#myModal">QUERO PASSAR</button>
+					<button class="warning-button course" name="ENEM 2016">QUERO PASSAR</button>
 				</div>
 			</div>
 		</div>
