Adicionando campo de nome e mudando telefone para whatsapp

--- a/index.html
+++ b/index.html
@@ -481,6 +481,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 						<div class="row">
 							<div class="col-lg-12">
 								<div class="row">
+									<div class="col-lg-12 col-md-12">
+										<div class="form-group">
+											<label for="name">Nome*</label>
+											<input type="text" class="form-control" placeholder="Entre com o seu nome" id="name" name="name" required>
+										</div>
+									</div>
+								</div>
+								<div class="row">
 									<div class="col-lg-6 col-sm-12">
 										<div class="form-group">
 											<label for="email">E-mail*</label>
@@ -489,7 +497,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									</div>
 									<div class="col-lg-6 col-sm-12">
 										<div class="form-group">
-											<label for="name">Celular</label>
+											<label for="name">Whatsapp</label>
 											<input type="tel" class="form-control" placeholder="Entre com o seu celular" id="phone" name="phone">
 										</div>
 									</div>
